Fix button text not visible with certain browser themes

--- a/wikimash.css
+++ b/wikimash.css
@@ -35,6 +35,7 @@ a {
 }
 
 input, button {
+  color: black;
   font-size: 16px;
 }
 
